# genpybindings

./: CMakeLists.txt  stack.yaml
cmake/: genpy_boost-extras.cmake.in  genpybindings-extras.cmake.in
scripts/: __init__.py  gen_py_boost.py  gen_pybindings.py  main.cpp.template  module.cpp.template
